<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrangeBrandActivity">

    <include layout="@layout/orange_toolbar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_bar"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearlayout"
                style="@style/LinearContentBodyOrange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view_heading"
                    style="@style/HeadingOrange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_heading" />

                <View style="@style/LayoutDivider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true">

                    <View
                        android:id="@+id/circle"
                        style="@style/Circle"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/theme_circle" />

                    <TextView
                        android:id="@+id/textViewPrimary"
                        style="@style/PrimaryTextViewOrange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/circle"
                        android:text="@string/primary_text" />

                    <TextView
                        android:id="@+id/textViewSecondary"
                        style="@style/SecondaryTextViewOrange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textViewPrimary"
                        android:layout_toEndOf="@+id/circle"
                        android:text="@string/secondary_text" />

                    <ImageView
                        android:id="@+id/info_view"
                        style="@style/ImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <View style="@style/LayoutDivider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true">

                    <View
                        android:id="@+id/circle01"
                        style="@style/Circle"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/theme_circle" />

                    <TextView
                        android:id="@+id/textViewPrimary01"
                        style="@style/PrimaryTextViewOrange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/circle01"
                        android:text="@string/primary_text" />

                    <TextView
                        android:id="@+id/textViewSecondary01"
                        style="@style/SecondaryTextViewOrange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textViewPrimary01"
                        android:layout_toEndOf="@+id/circle01"
                        android:text="@string/secondary_text" />

                    <ImageView
                        android:id="@+id/info_view01"
                        style="@style/ImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <View style="@style/LayoutDivider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true">

                    <View
                        android:id="@+id/circle02"
                        style="@style/Circle"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/theme_circle" />

                    <TextView
                        android:id="@+id/textViewPrimary02"
                        style="@style/PrimaryTextViewOrange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/circle02"
                        android:text="@string/primary_text" />

                    <TextView
                        android:id="@+id/textViewSecondary02"
                        style="@style/SecondaryTextViewOrange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textViewPrimary02"
                        android:layout_toEndOf="@+id/circle02"
                        android:text="@string/secondary_text" />

                    <ImageView
                        android:id="@+id/info_view02"
                        style="@style/ImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </LinearLayout>

            <View
                android:id="@+id/layout_gap"
                style="@style/LayoutGap" />

            <LinearLayout
                style="@style/LinearContentBodyOrange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_view_heading01"
                    style="@style/HeadingOrange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_text_heading" />

                <View style="@style/LayoutDivider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <View
                        android:id="@+id/circle03"
                        style="@style/Circle"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/theme_circle" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/circle03">

                        <EditText
                            android:id="@+id/editText"
                            style="@style/EditTextOrange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint"
                            android:text="@string/editText" />
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/info_view03"
                        style="@style/ImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <View style="@style/LayoutDivider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <View
                        android:id="@+id/circle04"
                        style="@style/Circle"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/theme_circle" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/circle04">

                        <EditText
                            android:id="@+id/editText01"
                            style="@style/EditTextOrange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint"
                            android:text="@string/editText" />
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/info_view04"
                        style="@style/ImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <View style="@style/LayoutDivider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <View
                        android:id="@+id/circle05"
                        style="@style/Circle"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/theme_circle" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/circle05">

                        <EditText
                            android:id="@+id/editText02"
                            style="@style/EditTextOrange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint"
                            android:text="@string/editText" />
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/info_view05"
                        style="@style/ImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_bar"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/mediumdp"
        android:layout_marginEnd="@dimen/mediumdp"
        android:contentDescription="@string/fab"
        android:elevation="@dimen/highEle"
        android:src="@android:drawable/ic_input_add"
        android:tint="@color/default_fab_tint" />

    <android.support.v7.widget.Toolbar xmlns:toolbar="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/theme_orange_action_bar"
        android:elevation="@dimen/midEle"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Toolbar.Orange"
        toolbar:contentInsetLeft="@dimen/bottom_bar_inset"
        toolbar:contentInsetStart="@dimen/bottom_bar_inset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/map_button"
                style="@style/ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/map"
                android:src="@android:drawable/ic_dialog_map" />

            <ImageButton
                android:id="@+id/email_button"
                style="@style/ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/email"
                android:src="@android:drawable/ic_dialog_email" />

            <ImageButton
                android:id="@+id/info_button"
                style="@style/ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/info"
                android:src="@android:drawable/ic_dialog_info" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

</RelativeLayout>
